--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
+    <string name="app_name">Sample</string>
+    <string name="forward">forward</string>
+    <string name="back">back</string>
     <string name="app_name">Consʌlt</string>
 </resources>
