--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-
+    <string name="action_settings">Settings</string>
     <string name="forward">forward</string>
     <string name="back">back</string>
     <string name="app_name">Consʌlt</string>
-
 </resources>
