--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="forward">forward</string>
     <string name="back">back</string>
     <string name="app_name">Consʌlt</string>
+    <string name="tasks">Tasks</string>
+    <string name="messages">Messages</string>
+    <string name="pager">Pager</string>
+    <string name="profile">My Profile</string>
+    <string name="profile_details">Profile Details</string>
     <!--    <string name="default_notification_channel_id">Channel id</string>-->
     <!--    <item name="sendBtn" type="id">Send Button</item>-->
     <!--    <item name="senderEt" type="id">Sender Et</item>-->
